added the source of the dataset

--- a/Spam SMS Detection.ipynb
+++ b/Spam SMS Detection.ipynb
@@ -5,7 +5,7 @@
    "id": "790d8e72",
    "metadata": {},
    "source": [
-    "## Spam Email Detection using Naive Bayes technique ##"
+    "## Spam SMS Detection using Naive Bayes technique ##"
    ]
   },
   {
@@ -86,7 +86,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Reading file from dataset\n",
+    "# Reading file from dataset \n",
+    "# this dataset is downloaded from https://archive.ics.uci.edu/ml/machine-learning-databases/00228/\n",
     "df = pd.read_table('smsspamcollection/SMSSpamCollection', sep='\\t', names=['label','sms_message'])\n",
     "\n",
     "df.head()"
